// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Checkboxes box matches snapshot 1`] = `
<div
  className="nhsuk-checkboxes__item"
  style={Object {}}
>
  <input
    aria-describedby="id__label"
    className="nhsuk-checkboxes__input"
    disabled={false}
    id="id"
    name="checkboxes"
    onClick={[Function]}
    type="checkbox"
    value="option"
  />
  <Label
    className="nhsuk-checkboxes__label"
    htmlFor="id"
    style={Object {}}
    type=""
  >
    Option
  </Label>
</div>
`;

exports[`Checkboxes returns other children normally 1`] = `
<Checkboxes
  className=""
  error=""
  hint=""
  label=""
  labelHtmlFor=""
  name="name"
  registerInitialValue={[Function]}
  style={Object {}}
  valueCallback={[Function]}
>
  <div
    className="nhsuk-checkboxes"
    style={Object {}}
  >
    <p
      key=".0"
    >
      Hello
    </p>
  </div>
</Checkboxes>
`;

exports[`Checkboxes wrapper matches snapshot 1`] = `
<Checkboxes
  className=""
  error=""
  hint=""
  label=""
  labelHtmlFor=""
  name="name"
  registerInitialValue={[Function]}
  style={Object {}}
  valueCallback={[Function]}
>
  <div
    className="nhsuk-checkboxes"
    style={Object {}}
  >
    <Box
      _id="name-1"
      _onClick={[Function]}
      className=""
      disabled={false}
      hint=""
      key=".0"
      name="name"
      style={Object {}}
      value="box"
    >
      <div
        className="nhsuk-checkboxes__item"
        style={Object {}}
      >
        <input
          aria-describedby="name-1__label"
          className="nhsuk-checkboxes__input"
          disabled={false}
          id="name-1"
          name="name"
          onClick={[Function]}
          type="checkbox"
          value="box"
        />
        <Label
          className="nhsuk-checkboxes__label"
          htmlFor="name-1"
          style={Object {}}
          type=""
        >
          <label
            className="nhsuk-label nhsuk-checkboxes__label"
            htmlFor="name-1"
            id="name-1__label"
            style={Object {}}
          >
            Box
          </label>
        </Label>
      </div>
    </Box>
  </div>
</Checkboxes>
`;
